[package]
name = "mdbook-tag"
version = "0.0.1"
authors = ["Dylan Owen"]
description = "mdbook preprocessor to consolidate tags from pages"
readme = "Readme.md"
license = "MPL-2.0"
homepage = "https://github.com/dylanowen/mdbook-tag"
repository = "https://github.com/dylanowen/mdbook-tag"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.3"
clap = "2.33"
serde_json = "1.0"
toml = "0.5"
pulldown-cmark = "0.5"
pulldown-cmark-to-cmark = "1.2"